# GameDevCourses

./: .gitignore  README.md
LunarLander/: CMakeLists.txt  Game.cpp  utilities.h
LunarLander/gameengine/: allocator.h  camera.h  component.h  engine.h  font.h  gameengine.h  gameobject.h  physics.h  renderer.h
LunarLander/geometry/: geometry.h  polygon.cpp  polygon.h  rotation.cpp  rotation.h  vector2.h
LunarLander/test/: test.h
Unity/Arcade/: buf.txt
Unity/Arcade/Assets/: mainScene.unity
Unity/Arcade/Assets/Materials/: mat2.mat  mat3.mat  mat4.mat  whiteMat.mat
Unity/Arcade/Assets/Prefabs/: BallCreator.prefab  HoneyCombCreator.prefab  NoFraction0.prefab  RandomFiller.prefab  SimpleCretor.prefab  SimpleFraction0.prefab  SimpleFraction1.prefab  ThoroidCreator.prefab
Unity/Arcade/Assets/Scenes/: SampleScene.unity
Unity/Arcade/Assets/Scripts/: BasicStructs.cs  CameraController.cs  Field.cs  FieldCameraContriolers.cs  FieldCreator.cs  FieldFiller.cs  FieldSpawner.cs  Fraction.cs  GameMaster.cs  NextFieldButton.cs  NoFraction1.prefab  ProgressWriter.cs  RandomFiller.prefab  Rotator.cs  ShadeMaterial.mat  SimpleCreator.cs  SimpleCretor.prefab  SingleColor.shader  Tile.cs  TimeController.cs  WinningManager.cs  mat1.mat  mat2.mat
Unity/Arcade/Assets/Scripts/Creators/: BallCreator.cs  HoneyCombsCreator.cs  (+2 more)
Unity/Arcade/ProjectSettings/: ProjectSettings.asset
Unity/oks/Assets/: scene.unity
Unity/oks/Assets/Scripts/: GameMasterLogic.cs  Tile.prefab  TileLogic.cs  mat2.mat  mat3.mat  mat4.mat  mat5.mat
Unity/oks/ProjectSettings/: ProjectSettings.asset
(+4 files in other folders)
